chore(apps/web): update default transition

--- a/apps/web/app/assets/styles/transition.css
+++ b/apps/web/app/assets/styles/transition.css
@@ -1,19 +1,11 @@
-.page-enter-active,
-.page-leave-active {
-  transition: all 0.4s;
+/**
+  * Fade in and out
+  */
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.4s;
 }
-.page-enter-from,
-.page-leave-to {
+.fade-enter-from,
+.fade-leave-to {
   opacity: 0;
-  filter: blur(1rem);
-}
-
-.layout-enter-active,
-.layout-leave-active {
-  transition: all 0.4s;
-}
-.layout-enter-from,
-.layout-leave-to {
-  opacity: 0;
-  transform: rotate3d(1, 1, 1, 15deg);
 }
