--- a/apps/nuxt/app/assets/styles/index.css
+++ b/apps/nuxt/app/assets/styles/index.css
@@ -1,5 +1,7 @@
-@layer reset, base, transition;
+/* @see nuxt.config.ts app.head.style */
+/* @layer nuxt-icon, reset, primevue, uno-primevue-sakai, layout-sakai, base, transition; */
 
 @import '@unocss/reset/tailwind.css' layer(reset);
+@import './sakai/layout.pcss' layer(layout-sakai);
 @import './base.css' layer(base);
 @import './transition.css' layer(transition);
