refactor(apps/nuxt): use nuxt/icon module instaead of unocss/icon

--- a/packages/nuxt-layer-primo/assets/styles/layout/_topbar.pcss
+++ b/packages/nuxt-layer-primo/assets/styles/layout/_topbar.pcss
@@ -57,11 +57,11 @@
       @mixin focused;
     }
 
-    i {
+    .layout-topbar-action-icon {
       font-size: 1.25rem;
     }
 
-    span {
+    .layout-topbar-action-label {
       font-size: 1rem;
       display: none;
     }
@@ -141,12 +141,12 @@
         border-radius: var(--content-border-radius);
         padding: 0.5rem 1rem;
 
-        i {
+        .layout-topbar-action-icon {
           font-size: 1rem;
           margin-right: 0.5rem;
         }
 
-        span {
+        .layout-topbar-action-label {
           font-weight: medium;
           display: block;
         }
