--- a/packages/nuxt-layer-shared/assets/styles/index.css
+++ b/packages/nuxt-layer-shared/assets/styles/index.css
@@ -1,3 +1,4 @@
+/* @see ~/utils/sharedToogleDarkUtil */
 ::view-transition-old(root),
 ::view-transition-new(root) {
   animation: none;
@@ -14,4 +15,10 @@
 }
 .dark::view-transition-new(root) {
   z-index: 1;
+}
+
+/*@see ~/config/icon */
+.nuxt-icon {
+  display: inline-block;
+  vertical-align: middle;
 }
