refactor(shared): toggle color mode

--- a/packages/nuxt-layer-shared/assets/styles/index.css
+++ b/packages/nuxt-layer-shared/assets/styles/index.css
@@ -1,4 +1,4 @@
-/* @see ~/utils/sharedToogleDarkUtil */
+/* @see packages/shared/appearance/dynamic */
 ::view-transition-old(root),
 ::view-transition-new(root) {
   animation: none;
