--- a/packages/nuxt-layer-primo/assets/styles/layout/_core.pcss
+++ b/packages/nuxt-layer-primo/assets/styles/layout/_core.pcss
@@ -6,7 +6,7 @@ html {
 body {
   /* font-family: 'Lato', sans-serif; */
   color: var(--text-color);
-  background-color: var(--surface-ground);
+  background-color: var(--surface-card);
   margin: 0;
   padding: 0;
   min-height: 100%;
