--- a/packages/nuxt-layer-primo/assets/styles/layout/_responsive.pcss
+++ b/packages/nuxt-layer-primo/assets/styles/layout/_responsive.pcss
@@ -9,19 +9,51 @@
 
 @media (min-width: 992px) {
   .layout-wrapper {
-    .layout-main-container {
-      margin-left: calc(22rem + 2.5rem);
-    }
+    &.layout-overlay {
+      .layout-main-container {
+        margin-left: 0;
+        padding-left: 2rem;
+      }
 
-    &.layout-desktop-inactive {
       .layout-sidebar {
         transform: translateX(-100%);
         left: 0;
+        top: 0;
+        height: 100vh;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-right: 1px solid var(--surface-border);
+        transition:
+          transform 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99),
+          left 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99);
+        box-shadow:
+          0px 3px 5px rgba(0, 0, 0, 0.02),
+          0px 0px 2px rgba(0, 0, 0, 0.05),
+          0px 1px 4px rgba(0, 0, 0, 0.08);
       }
 
+      &.layout-overlay-active {
+        .layout-sidebar {
+          transform: translateX(0);
+        }
+      }
+    }
+
+    &.layout-static {
       .layout-main-container {
-        margin-left: 2.5rem;
-        padding-left: 2rem;
+        margin-left: 22rem;
+      }
+
+      &.layout-static-inactive {
+        .layout-sidebar {
+          transform: translateX(-100%);
+          left: 0;
+        }
+
+        .layout-main-container {
+          margin-left: 0;
+          padding-left: 2rem;
+        }
       }
     }
 
@@ -40,7 +72,6 @@
     .layout-main-container {
       margin-left: 0;
       padding-left: 2rem;
-      padding-top: 6rem;
     }
 
     .layout-sidebar {
