feat!(nuxt-layer-basic): add postcss-reset-env
- remove postcss-mixins, unused
- remove postcss-nesting, unneed

--- a/packages/nuxt-layer-primo/assets/styles/layout/_menu.pcss
+++ b/packages/nuxt-layer-primo/assets/styles/layout/_menu.pcss
@@ -90,7 +90,8 @@
       }
 
       &:focus {
-        @mixin focused-inset;
+        outline-offset: -1px;
+        box-shadow: inset var(--focus-ring-shadow);
       }
     }
 
